# wex-guide

./: .gitignore  .gitmodules
rf/doc/: cleanup.sh  decoding.tex  equipment.tex  feathers.tex  generate.sh  introduction.tex  main.tex  spectrum.tex
rf/src/feather/: SimpleFSKSend.ino
rf/src/feather/SimpleFSKRx.ino/: SimpleFSKRx.ino.ino
rf/src/feather/SimpleFSKSend/: SimpleFSKSend.ino
rf/src/gnuradio/FFT/: FFT.grc  top_block.py
rf/src/gnuradio/SimpleFSKSend/: SimpleFSKSpectrum.grc  SimpleFSKSpectrumLPFClkRecover.grc  example.grc  top_block.py
rf/src/gnuradio/blocks/gr-wex/: CMakeLists.txt  MANIFEST.md
rf/src/gnuradio/blocks/gr-wex/cmake/Modules/: wexConfig.cmake
rf/src/gnuradio/blocks/gr-wex/docs/: README.wex
rf/src/gnuradio/blocks/gr-wex/docs/doxygen/: Doxyfile.in
rf/src/gnuradio/blocks/gr-wex/docs/doxygen/other/: group_defs.dox  main_page.dox
rf/src/gnuradio/blocks/gr-wex/grc/: CMakeLists.txt  wex_printer.xml  wex_tag_printer.xml
rf/src/gnuradio/blocks/gr-wex/include/wex/: CMakeLists.txt  api.h  printer.h  tag_printer.h
rf/src/gnuradio/blocks/gr-wex/lib/: CMakeLists.txt  printer_impl.cc  printer_impl.h  qa_printer.cc  qa_printer.h  qa_tag_printer.cc  qa_tag_printer.h  qa_wex.cc  qa_wex.h  tag_printer_impl.cc  tag_printer_impl.h  test_wex.cc
rf/src/gnuradio/blocks/gr-wex/python/: CMakeLists.txt
rf/src/gnuradio/blocks/gr-wex/swig/: CMakeLists.txt  wex_swig.i
rf/src/tools/: out
rf/src/tools/analyser/: .clang-format  doit.sh  makefile
rf/src/tools/analyser/src/: main.cpp
